# strobemers

./: .gitignore  Cargo.toml  Makefile  README.md
data/: DF000000975.fa  artificial.fasta  sequences_2001.csv
data/experiment1/: alignment-output.csv  estimation-output.csv  query.fasta  references.fasta
data/experiment2/: output0.csv  output1.csv  output2.csv  output3.csv  output4.csv  output5.csv  output6.csv  output7.csv  output8.csv  output9.csv  query0.fasta  query1.fasta  query3.fasta  query4.fasta  query6.fasta  query8.fasta  references0.fasta  references3.fasta  references4.fasta  references8.fasta
data/experiment2-ten-query/: kmers.sh  plot.py  strobemers.sh
data/experiment2-ten-query/data/: (2,4,6,8)-minstrobemer.csv  (2,5,5,25)-minstrobemer.csv  5-mer.csv  7-mer.csv  8-mer.csv
data/experiment2-ten-query/sequences/: query0.fasta  query2.fasta  query5.fasta  query7.fasta  query9.fasta  references1.fasta  references2.fasta  references5.fasta  references6.fasta  references7.fasta  references9.fasta
data/experiment3_100_query_higher_res/: kmers.sh  plot.py  strobemers.sh
data/experiment3_100_query_higher_res/data/: (2,5,5,25)-minstrobemer.csv  (2,6,5,25)-minstrobemer.csv  7-mer.csv
data/experiment3_100_query_higher_res/sequences/: query0.fasta  query1.fasta  query2.fasta  query3.fasta  query4.fasta  query5.fasta  query6.fasta  query7.fasta  query8.fasta  query9.fasta
data/inputs/experiment1/: query.fasta
data/inputs/experiment2/: query.fasta
data/inputs/simulated_data/: references1.fasta
data/outputs/: strobemer-output.csv
data/outputs/experiment1/: alignment-output.csv  kmer-output.csv  strobemer-output.csv
data/outputs/experiment1_1/: alignment-output.csv  (+1 more)
data/sahlin_data/: .gitignore  align-minimap2.py  preprocess-pychopper.py
scripts/: kmer_experiment.sh  run_experiment.py  simulate_data.py
src/: cli.rs  distance_functions.rs  lib.rs  main.rs  strobe_map.rs
src/scripting/: edit_distance.py  plotter.py  run.py  run_alignment.py  run_experiment.py  run_kmer.py  run_spaced_kmer.py  run_strobemers.py  simulate_data.py  tools.py
tests/: cli.rs  test_representations.rs  test_similarity_methods.rs
tests/inputs/: sequences_3.csv
tests/outputs/: comparisons.db
(+103 files in other folders)
