[package]
name = "similarity_methods"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
edit-distance = "2.1.0"
csv = "1.3.0"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.8", features = ["derive"] }
anyhow = "1.0.86"
assert_cmd = "2.0.14"
pretty_assertions = "1.4.0"
tempfile = "3.10.1"
seahash = "4.1.0"

[lib]
name = "similarity_methods"
path = "src/lib.rs"