[package]
name = "alignment_free_methods"
version = "0.1.0"
edition = "2021"
default-run = "strobemer_comparison"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
edit-distance = "2.1.0"
csv = "1.3.0"
serde = { version = "1", features = ["derive"] }
seq_io = "0.3.2"
bio = "2.0.1"
rusqlite = {version = "0.32.0", features = ["bundled"]}
clap = { version = "4.5.8", features = ["derive"] }
anyhow = "1.0.86"
assert_cmd = "2.0.14"
pretty_assertions = "1.4.0"
tempfile = "3.10.1"
seahash = "4.1.0"
itertools = "0.10"

[lib]
name = "alignment_free_methods"  # This name will be used to reference the library
path = "src/lib.rs"  # Specify the path to your library file

[[bin]]
name = "strobemer_comparison"
path = "src/bin/strobemer_comparison.rs"

[[bin]]
name = "alignment"
path = "src/bin/alignment.rs"

[[bin]]
name = "kmer_comparison"
path = "src/bin/kmer_comparison.rs"