[package]
name = "alignment_free_methods"
version = "0.1.0"
edition = "2021"
default-run = "strobemer_comparison"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
anyhow = "1.0.86"
pretty_assertions = "1.4.0"
tempfile = "3.13.0"

[lib]
name = "alignment_free_methods"  # This name will be used to reference the library
path = "src/lib.rs"  # Specify the path to your library file

[[bin]]
name = "strobemer_comparison"
path = "src/bin/strobemer_comparison.rs"

[[bin]]
name = "kmer_comparison"
path = "src/bin/kmer_comparison.rs"